--- a/Makefile.section.functions
+++ b/Makefile.section.functions
@@ -14,7 +14,7 @@ pdf-installation-and-upgrade-index-en:
 
 .PHONY: pdf-installation-and-upgrade-mlm-en
 pdf-installation-and-upgrade-mlm-en: translations prepare-antora-mlm-en pdf-installation-and-upgrade-index-en
-	$(call pdf-installation-and-upgrade-product,translations/en,suse-2025,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
+	$(call pdf-installation-and-upgrade-product,translations/en,suse,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
 
 .PHONY: pdf-installation-and-upgrade-uyuni-en
 pdf-installation-and-upgrade-uyuni-en: translations prepare-antora-uyuni-en pdf-installation-and-upgrade-index-en
@@ -76,7 +76,7 @@ pdf-client-configuration-index-en:
 
 .PHONY: pdf-client-configuration-mlm-en
 pdf-client-configuration-mlm-en: translations prepare-antora-mlm-en pdf-client-configuration-index-en
-	$(call pdf-client-configuration-product,translations/en,suse-2025,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
+	$(call pdf-client-configuration-product,translations/en,suse,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
 
 .PHONY: pdf-client-configuration-uyuni-en
 pdf-client-configuration-uyuni-en: translations prepare-antora-uyuni-en pdf-client-configuration-index-en
@@ -138,7 +138,7 @@ pdf-administration-index-en:
 
 .PHONY: pdf-administration-mlm-en
 pdf-administration-mlm-en: translations prepare-antora-mlm-en pdf-administration-index-en
-	$(call pdf-administration-product,translations/en,suse-2025,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
+	$(call pdf-administration-product,translations/en,suse,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
 
 .PHONY: pdf-administration-uyuni-en
 pdf-administration-uyuni-en: translations prepare-antora-uyuni-en pdf-administration-index-en
@@ -200,7 +200,7 @@ pdf-reference-index-en:
 
 .PHONY: pdf-reference-mlm-en
 pdf-reference-mlm-en: translations prepare-antora-mlm-en pdf-reference-index-en
-	$(call pdf-reference-product,translations/en,suse-2025,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
+	$(call pdf-reference-product,translations/en,suse,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
 
 .PHONY: pdf-reference-uyuni-en
 pdf-reference-uyuni-en: translations prepare-antora-uyuni-en pdf-reference-index-en
@@ -262,7 +262,7 @@ pdf-retail-index-en:
 
 .PHONY: pdf-retail-mlm-en
 pdf-retail-mlm-en: translations prepare-antora-mlm-en pdf-retail-index-en
-	$(call pdf-retail-product,translations/en,suse-2025,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
+	$(call pdf-retail-product,translations/en,suse,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
 
 .PHONY: pdf-retail-uyuni-en
 pdf-retail-uyuni-en: translations prepare-antora-uyuni-en pdf-retail-index-en
@@ -324,7 +324,7 @@ pdf-common-workflows-index-en:
 
 .PHONY: pdf-common-workflows-mlm-en
 pdf-common-workflows-mlm-en: translations prepare-antora-mlm-en pdf-common-workflows-index-en
-	$(call pdf-common-workflows-product,translations/en,suse-2025,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
+	$(call pdf-common-workflows-product,translations/en,suse,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
 
 .PHONY: pdf-common-workflows-uyuni-en
 pdf-common-workflows-uyuni-en: translations prepare-antora-uyuni-en pdf-common-workflows-index-en
@@ -386,7 +386,7 @@ pdf-specialized-guides-index-en:
 
 .PHONY: pdf-specialized-guides-mlm-en
 pdf-specialized-guides-mlm-en: translations prepare-antora-mlm-en pdf-specialized-guides-index-en
-	$(call pdf-specialized-guides-product,translations/en,suse-2025,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
+	$(call pdf-specialized-guides-product,translations/en,suse,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
 
 .PHONY: pdf-specialized-guides-uyuni-en
 pdf-specialized-guides-uyuni-en: translations prepare-antora-uyuni-en pdf-specialized-guides-index-en
@@ -448,7 +448,7 @@ pdf-legal-index-en:
 
 .PHONY: pdf-legal-mlm-en
 pdf-legal-mlm-en: translations prepare-antora-mlm-en pdf-legal-index-en
-	$(call pdf-legal-product,translations/en,suse-2025,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
+	$(call pdf-legal-product,translations/en,suse,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
 
 .PHONY: pdf-legal-uyuni-en
 pdf-legal-uyuni-en: translations prepare-antora-uyuni-en pdf-legal-index-en
