--- a/branding/pdf/themes/suse-2025-theme.yml
+++ b/branding/pdf/themes/suse-2025-theme.yml
@@ -65,10 +65,13 @@ base:
   font_weight: light  # Light for normal body text
   align: justify  # Align all base text justified
   font_color: #333333
+  # Testing base line height length for sentence length on page
+  line_height_length: 13.8
   line_height: 1.5
   border_color: #EEEEEE
   border_radius: 4
   border_width: 0.5
+
 
   # Font sizes from XSL
   font_sizes:
@@ -155,9 +158,6 @@ page:
   margin: [20mm, 27mm, 27mm, 20mm]
   size: A4
 
-vertical_rhythm: $base_line_height_length
-horizontal_rhythm: $base_line_height_length
-
 # Images
 image:
   align: center
@@ -173,13 +173,37 @@ link:
 admonition:
   column_rule_color: #D7D7D7  # SUSE Fog 300
   column_rule_width: 2.5
+  column_rule_style: dotted
+  padding: [0, $horizontal_rhythm, 0, $horizontal_rhythm]
+  label:
+    align: center
+    vertical_align: middle
+    font_color:  #30BA78  # SUSE Jungle
+    font_family: $base_font_family
   icon:
     tip:
-      stroke_color: #30BA78  # SUSE Jungle
+      name: fa-lightbulb-o
+      stroke_color: $brand_primary_susejungle
+      size: $base_font_sizes_xxx-large
+    note:
+      stroke_color: $brand_primary_susejungle
+      name: fa-info-circle
+      size: $base_font_sizes_xxx-large
     important:
-      stroke_color: #FF6A52  # SUSE Coral
+      name: fa-exclamation-circle
+      stroke_color: $brand_primary_susecoral
+      size: $base_font_sizes_xxx-large
     warning:
-      stroke_color: #FF6A52  # SUSE Coral
+      name: fa-exclamation-triangle
+      stroke_color: $brand_primary_susecoral
+      size: $base_font_sizes_xxx-large
+    caution:
+      name: fa-fire
+      stroke_color: $brand_elements_error
+      size: $base_font_sizes_xxx-large
+
+vertical_rhythm: $base_line_height_length
+horizontal_rhythm: $base_line_height_length
 
 # Buttons
 button:
