--- a/branding/pdf/themes/suse-theme.yml
+++ b/branding/pdf/themes/suse-theme.yml
@@ -1,36 +1,20 @@
-###
-### This is the AsciiDoctor-PDF export template for SUSE Documentation
-###
-### Joseph Cayouette (jcayouette@suse.com), 2025
+### SUSE Documentation Asciidoctor-PDF English Export Template
+### Author: Joseph Cayouette (jcayouette@suse.com), 2025
 ###
 
 # Define font catalog
 font:
   catalog:
-    #SUSE 2025 Font
+    # SUSE 2025 Font Family
     SUSE:
-      # SUSE Latin
-      normal: SUSE-Regular.ttf
-      bold: SUSE-Bold.ttf
-      italic: SUSE-Regular.ttf
+      normal: SUSE-Regular.ttf  # Default body font
+      bold: SUSE-Bold.ttf       # Bold text
+      italic: SUSE-Regular.ttf  # Regular Italic
       bold_italic: SUSE-Bold.ttf
-      # SUSE Latin Ext
-      light: SUSE-Light.ttf
-      medium: SUSE-Medium.ttf
-      semibold: SUSE-SemiBold.ttf
+      light: SUSE-Light.ttf     # Light body text
+      medium: SUSE-Medium.ttf   # Headings
+      semibold: SUSE-SemiBold.ttf  # Subheadings
       heavy: SUSE-ExtraBold.ttf
-
-    Free Serif:
-      normal: freeserif.ttf
-      bold: freeserif_bold.ttf
-      italic: freeserif_italic.ttf
-      bold_italic: freeserif_bold_italic.ttf
-
-    Montserrat:
-      normal: montserrat-normal.ttf
-      bold: montserrat-bold.ttf
-      italic: montserrat-italic.ttf
-      bold_italic: montserrat-bold_italic.ttf
 
     # Noto Serif supports Latin, Latin-1 Supplement, Latin Extended-A, Greek, Cyrillic, Vietnamese & an assortment of symbols
     Noto Serif:
@@ -61,7 +45,6 @@ capfont:
 
 brand:
   font: SUSE
-  #Free Serif
   # Colors from: https://www.suse.com/brandcentral/suse/identity.php#palette
   primary:
     susepine: #0C322C
@@ -154,6 +137,7 @@ base:
 # correct line height for Noto Serif metrics (comes with built-in line height)
 vertical_rhythm: $base_line_height_length
 horizontal_rhythm: $base_line_height_length
+
 # QUESTION should vertical_spacing be block_spacing instead?
 vertical_spacing: $vertical_rhythm
 
@@ -492,63 +476,25 @@ header:
       content: $header_recto_center_content
     right:
      content: $header_recto_right_content
+
+#Footer     
 footer:
   font-size: $base_font_size_xsmall
   font-color: #000
   font-style: italic
-  # NOTE if background_color is set, background and border will span width of page
-  #border_color: dddddd
-  #border_width: 0.25
   height: 0.75in
   line_height: $base_line_height
   padding: [$base_line_height_length / 0, 0, 0, 0]
   vertical_align: top
   image_vertical_align: middle
-  #image_vertical_align: <alignment> or <number>
-  # additional attributes for content:
-  # * {page-count}
-  # * {page-number}
-  # * {document-title}
-  # * {document-subtitle}
-  # * {chapter-title}
-  # * {section-title}
-  # * {section-or-chapter-title}
-
-  # recto:
-  #   #columns: "<50% =0% >50%"
-  #   left:
-  #     content: '{document-title} | {section-or-chapter-title} '
-
-  #   center:
-  #     content:
-
-  #   right:
-  #     content:  '*{page-number} / {page-count}*'
-
-  # verso:
-  #   left:
-  #     content: $footer_recto_left_content
-
-  #   center:
-  #     content: $footer_recto_center_content
-
-  #   right:
-  #     content: $footer_recto_right_content
-
+  font_family: SUSE
   recto:
     left:
       content: '*{page-number} / {page-count}*'
-      font-color: #000
-    center:
-      content:
     right:
-      content: '{section-or-chapter-title} | {document-title}'
-      background-color: transparent
-
+      content: '{section-title} | {document-title}'
   verso:
     left:
-      content: $footer_recto_left_content
-    center:
-      content: $footer_recto_center_content
+      content: '*{page-number} / {page-count}*'
     right:
-      content: $footer_recto_right_content
+      content: '{section-title} | {document-title}'
