--- a/parameters.yml
+++ b/parameters.yml
@@ -99,7 +99,7 @@ languages: #language parameters
   - langcode: "en"
     locale: "en_US.utf8"
     gnudateformat: "%B %d %Y"
-    pdf_theme_mlm: "suse-2025"
+    pdf_theme_mlm: "suse"
     pdf_theme_uyuni: "uyuni"
   # - langcode: "cs"
   #   locale: "cs_CZ.UTF-8"
