Pin all GitHub actions to a commit

--- a/.github/workflows/build_and_archive_devel_docs.yml
+++ b/.github/workflows/build_and_archive_devel_docs.yml
@@ -17,12 +17,12 @@ jobs:
 
     steps:
     - name: Checkout this repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
       with:
         path: uyuni-docs
 
     - name: Checkout uyuni-docs-helper repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
       with:
         path: uyuni-docs-helper
         repository: uyuni-project/uyuni-docs-helper
@@ -42,7 +42,7 @@ jobs:
       if: github.ref_name == 'master'
 
     - name: Archive Uyuni Documentation
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #v4.6.1
       with:
         name: documentation-uyuni-${{ github.ref_name }}
         path: uyuni/
@@ -57,7 +57,7 @@ jobs:
         cp -r /tmp/build ./susemanager/susemanager
 
     - name: Archive SUSE Manager Documentation
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #v4.6.1
       with:
         name: documentation-susemanager-${{ github.ref_name }}
         path: susemanager/
