--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -10,10 +10,10 @@ jobs:
 
     steps:
     - name: 'Checkout branch that triggered this workflow'
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
 
     - name: 'Set up Ruby 3.0'
-      uses: ruby/setup-ruby@v1
+      uses: ruby/setup-ruby@922ebc4c5262cd14e07bb0e1db020984b6c064fe #v1.226.0
       with:
         ruby-version: '3.0'
 
@@ -21,7 +21,7 @@ jobs:
       run: gem install asciidoctor
 
     - name: 'Run Vale'
-      uses: errata-ai/vale-action@reviewdog
+      uses: errata-ai/vale-action@2690bc95f0ed3cb5220492575af09c51b04fbea9 #reviewdog branch on 2025-03-18, we should use a version instead
       with:
         # Optional
         styles: |
