--- a/.github/workflows/build_and_archive_release_docs.yml
+++ b/.github/workflows/build_and_archive_release_docs.yml
@@ -19,12 +19,12 @@ jobs:
 
     steps:
     - name: Checkout this repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
       with:
         path: uyuni-docs
 
     - name: Checkout uyuni-docs-helper repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
       with:
         path: uyuni-docs-helper
         repository: uyuni-project/uyuni-docs-helper
@@ -45,7 +45,7 @@ jobs:
       if: startsWith(github.ref_name, 'uyuni-')
 
     - name: Archive Uyuni site Documentation
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #v4.6.1
       with:
         name: documentation-uyuni-site-${{ github.ref_name }}
         path: uyuni/
@@ -62,7 +62,7 @@ jobs:
       if: startsWith(github.ref_name, 'uyuni-')
 
     - name: Archive Uyuni package Documentation
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #v4.6.1
       with:
         name: documentation-uyuni-package-${{ github.ref_name }}
         path: uyuni/
@@ -79,7 +79,7 @@ jobs:
       if: startsWith(github.ref_name, 'manager-')
 
     - name: Archive SUSE Multi-Linux Manager site Documentation
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #v4.6.1
       with:
         name: documentation-suse-multi-linux-manager-site-${{ github.ref_name }}
         path: suse-multi-linux-manager/
@@ -96,14 +96,14 @@ jobs:
       if: startsWith(github.ref_name, 'manager-')
 
     - name: Archive SUSE Multi-Linux Manager package Documentation (only english)
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #v4.6.1
       with:
         name: documentation-suse-multi-linux-manager-package-${{ github.ref_name }}
         path: suse-multi-linux-manager/
       if: startsWith(github.ref_name, 'manager-')
 
     - name: Archive the changelog
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #v4.6.1
       with:
         name: changelog
         path: uyuni-docs/CHANGELOG.md
