--- a/.github/workflows/test_pdf_translations.yml
+++ b/.github/workflows/test_pdf_translations.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
     - name: Checkout this repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
       with:
         path: uyuni-docs
 
     - name: Checkout uyuni-docs-helper repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
       with:
         path: uyuni-docs-helper
         repository: uyuni-project/uyuni-docs-helper
