--- a/l10n-weblate/client-configuration.cfg
+++ b/l10n-weblate/client-configuration.cfg
@@ -22,6 +22,7 @@
 [type: asciidoc] modules/client-configuration/pages/client-config-overview.adoc $lang:translations/$lang/modules/client-configuration/pages/client-config-overview.adoc
 [type: asciidoc] modules/client-configuration/pages/client-operations.adoc $lang:translations/$lang/modules/client-configuration/pages/client-operations.adoc
 [type: asciidoc] modules/client-configuration/pages/client-proxy-cli.adoc $lang:translations/$lang/modules/client-configuration/pages/client-proxy-cli.adoc
+[type: asciidoc] modules/client-configuration/pages/client-proxy-script.adoc $lang:translations/$lang/modules/client-configuration/pages/client-proxy-script.adoc
 [type: asciidoc] modules/client-configuration/pages/client-proxy-webui.adoc $lang:translations/$lang/modules/client-configuration/pages/client-proxy-webui.adoc
 [type: asciidoc] modules/client-configuration/pages/client-proxy.adoc $lang:translations/$lang/modules/client-configuration/pages/client-proxy.adoc
 [type: asciidoc] modules/client-configuration/pages/client-upgrades-lifecycle.adoc $lang:translations/$lang/modules/client-configuration/pages/client-upgrades-lifecycle.adoc
