--- a/branding/pdf/themes/suse-theme.yml
+++ b/branding/pdf/themes/suse-theme.yml
@@ -150,11 +150,12 @@ link:
 
 # codespan is currently used for inline monospaced in prose and table cells
 codespan:
-  background-color: #ffffff
-  font-color: #0C322C
-  font-family: SUSE
-  font-style: bold
-  font_size: $base_font_size_xxsmall * 1.3
+  font_color: #0c322c
+  font_family: SUSE
+  font_style: light
+  text_decoration: underline
+  text_decoration_color: #efefef
+
 
 ulist:
   marker:
@@ -396,14 +397,6 @@ description_list:
   term_spacing: $vertical_rhythm / 4
   description_indent: $horizontal_rhythm * 1.25
 
-literal:
-  font-color: #0c322c
-  font-family: SUSE
-  font-style: light
-  text-decoration: underline
-  text-decoration-color: #efefef
-
-
 # Controls
 list:
   indent: $horizontal_rhythm * 1.5
@@ -425,33 +418,42 @@ table:
   # HACK accounting for line-height
   cell_padding: [3, 3, 6, 3]
 
-# Table of Contents
 toc:
   title:
+    content: 'Contents'
     font_color: $brand_primary_susepine
+    font_size: $base_font_size_superlarge
+    font_style: light
+    align: left
+  hanging-indent: 0.5in
   indent: $horizontal_rhythm
+
   font_family: $brand_font
   font_size: $base_font_size
-  font_color: $brand_primary_susejungle
-  line_height: 1.0
-  dot_leader:
-    content: " "
-    font_color: $brand_primary_susepine
-    levels: 2 3 4 5 6
-  h1_font_color: $brand_primary_susepine
-  h1_font_size: $base_font_size_xxlarge
+  font_color: $brand_neutral_black
+  line_height: 1.2
 
-  h2_font_color: $brand_primary_susepine
+  dot_leader:
+    content: ""
+    font_color: $brand_neutral_grey
+    levels: all
+
+  h1_font_color: $brand_primary_susejungle
+  h1_font_size: $base_font_size_xxlarge
+  h1_font_style: bold
+
+  h2_font_color: $brand_neutral_black
   h2_font_size: $base_font_size_xlarge
 
-  h3_font_color: $brand_primary_susepine
+  h3_font_color: $brand_neutral_darkgrey
   h3_font_size: $base_font_size_medium
 
-  h4_font_color: $brand_primary_susepine
-  h4_font_size: $base_font_size_medium
+  h4_font_color: $brand_neutral_darkgrey
+  h4_font_size: $base_font_size_small
 
-  h5_font_color: $brand_primary_susepine
+  h5_font_color: $brand_neutral_darkgrey
   h5_font_size: $base_font_size_small
+
 
 header:
   font_size: $base_font_size_xsmall
