updated pdf themes for english

--- a/parameters.yml
+++ b/parameters.yml
@@ -416,10 +416,10 @@ asciidoc:
       value: .
     - attribute: source-highlighter
       value: rouge
-    #- attribute: toclevels
-    #  value: 3
-    #- attribute: toc
-    #  value: auto
+    - attribute: toclevels
+      value: 3
+    - attribute: toc
+      value: macro
     - attribute: doctype
       value: book
     - attribute: byos
