--- a/branding/pdf/themes/suse-theme.yml
+++ b/branding/pdf/themes/suse-theme.yml
@@ -112,7 +112,6 @@ base:
   font_size_small: 9.5
   font_size_normal: 9.5
   font_size_medium: 10.5
-  #11.15
   font_size_large: 12.5
   font_size_xlarge: 14
   font_size_xxlarge: 16
@@ -121,7 +120,6 @@ base:
   font_size_ultralarge: 36
   font_size_hyperlarge: 48
   font_size_min: $base_font_size_xxxsmall
-  # color as hex string (leading # is optional)
   font_color: 333333
   font_family: $brand_font
   font_style: normal
@@ -345,7 +343,6 @@ code:
   border_radius: 0
   padding: 6
 
-
 # Conum
 conum:
   font_family: $literal_font_family
@@ -418,14 +415,15 @@ table:
   # HACK accounting for line-height
   cell_padding: [3, 3, 6, 3]
 
+# Table of Contents
 toc:
   title:
     content: 'Contents'
+    font_style: light
     font_color: $brand_primary_susepine
     font_size: $base_font_size_superlarge
-    font_style: light
-    align: left
-  hanging-indent: 0.5in
+    
+  hanging-indent: 0.2in
   indent: $horizontal_rhythm
 
   font_family: $brand_font
@@ -434,15 +432,17 @@ toc:
   line_height: 1.2
 
   dot_leader:
-   content: ""
-   font_color: $brand_neutral_grey
-   levels: all
+   content: ". "
+   font_color: $brand_primary_susepine
+   font_size: $base_font_size_xlarge
+   font_style: italic
+   levels: 1
 
-  h1_font_color: $brand_primary_susejungle
+  h1_font_color: $brand_primary_susepine
   h1_font_size: $base_font_size_xxlarge
   h1_font_style: bold
 
-  h2_font_color: $brand_neutral_black
+  h2_font_color: $brand_primary_susepine
   h2_font_size: $base_font_size_xlarge
 
   h3_font_color: $brand_neutral_darkgrey
@@ -454,7 +454,7 @@ toc:
   h5_font_color: $brand_neutral_darkgrey
   h5_font_size: $base_font_size_small
 
-
+# Heading
 header:
   font_size: $base_font_size_xsmall
   font_color: #adadad
@@ -479,7 +479,7 @@ header:
     right:
      content: $header_recto_right_content
 
-#Footer     
+# Footer     
 footer:
   font-size: $base_font_size_xsmall
   font-color: #000
