--- a/l10n-weblate/legal.cfg
+++ b/l10n-weblate/legal.cfg
@@ -9,3 +9,4 @@
 [type: asciidoc] modules/legal/nav-legal-guide.adoc $lang:translations/$lang/modules/legal/nav-legal-guide.adoc
 [type: asciidoc] modules/legal/pages/copyright.adoc $lang:translations/$lang/modules/legal/pages/copyright.adoc
 [type: asciidoc] modules/legal/pages/license.adoc $lang:translations/$lang/modules/legal/pages/license.adoc
+[type: asciidoc] modules/legal/pages/trademarks.adoc $lang:translations/$lang/modules/legal/pages/trademarks.adoc
