--- a/parameters.yml
+++ b/parameters.yml
@@ -416,6 +416,7 @@ asciidoc:
       value: ../../snippets/
     - attribute: sourcedir
       value: .
+    # Source highlighter for Antora. PDF generation uses rouge and is located in NAVlist
     - attribute: source-highlighter
       value: highlight.js
     - attribute: toclevels
