Major Overhaul: Asciidoctor-PDF Theming, Backend Tooling, and Book Overview Pages  (#3760)
* first push for pdf

* update pdf styles and added new ruby template

* update book introductions to support new pdf styles

* update

* update

* removed doc date from subsections

* update

* update

* update

* updated pdf themes for english

* update

* update

* update

* update

--- a/branding/pdf/themes/suse-theme.yml
+++ b/branding/pdf/themes/suse-theme.yml
@@ -1,37 +1,20 @@
-###
-### This is the AsciiDoctor-PDF export template for SUSE Documentation
-###
-### Joseph Cayouette (jcayouette@suse.com), 2021
+### SUSE Documentation Asciidoctor-PDF English Export Template
+### Author: Joseph Cayouette (jcayouette@suse.com), 2025
 ###
 
 # Define font catalog
 font:
   catalog:
-
-    #SUSE 2021 Font
-    Poppins:
-      normal: Poppins-Regular.ttf
-      bold: Poppins-Medium.ttf
-      italic: Poppins-Light.ttf
-      bold_italic: Poppins-BoldItalic.ttf
-
-    # SUSE 2019 Font
-    Work Sans:
-      normal: WorkSans-Regular.ttf
-      bold: WorkSans-Medium.ttf
-      italic: WorkSans-Light.ttf
-
-    Free Serif:
-      normal: freeserif.ttf
-      bold: freeserif_bold.ttf
-      italic: freeserif_italic.ttf
-      bold_italic: freeserif_bold_italic.ttf
-
-    Montserrat:
-      normal: montserrat-normal.ttf
-      bold: montserrat-bold.ttf
-      italic: montserrat-italic.ttf
-      bold_italic: montserrat-bold_italic.ttf
+    # SUSE 2025 Font Family
+    SUSE:
+      normal: SUSE-Regular.ttf  # Default body font
+      bold: SUSE-Bold.ttf       # Bold text
+      italic: SUSE-Regular.ttf  # Regular Italic
+      bold_italic: SUSE-Bold.ttf
+      light: SUSE-Light.ttf     # Light body text
+      medium: SUSE-Medium.ttf   # Headings
+      semibold: SUSE-SemiBold.ttf  # Subheadings
+      heavy: SUSE-ExtraBold.ttf
 
     # Noto Serif supports Latin, Latin-1 Supplement, Latin Extended-A, Greek, Cyrillic, Vietnamese & an assortment of symbols
     Noto Serif:
@@ -58,11 +41,10 @@ font:
     - M+ 1p Fallback
 
 capfont:
-  font: Poppins Light
+  font: SUSE light
 
 brand:
-  font: Poppins
-  #Free Serif
+  font: SUSE
   # Colors from: https://www.suse.com/brandcentral/suse/identity.php#palette
   primary:
     susepine: #0C322C
@@ -130,7 +112,6 @@ base:
   font_size_small: 9.5
   font_size_normal: 9.5
   font_size_medium: 10.5
-  #11.15
   font_size_large: 12.5
   font_size_xlarge: 14
   font_size_xxlarge: 16
@@ -139,13 +120,13 @@ base:
   font_size_ultralarge: 36
   font_size_hyperlarge: 48
   font_size_min: $base_font_size_xxxsmall
-  # color as hex string (leading # is optional)
   font_color: 333333
   font_family: $brand_font
   font_style: normal
   font_size: $base_font_size_normal
   line_height_length: 13.8
-  line_height: $base_line_height_length / $base_font_size
+  line-height: 1.5
+  #line_height: $base_line_height_length / $base_font_size
   border_color: #EEEEEE
   border_radius: 4
   border_width: 0.5
@@ -154,30 +135,33 @@ base:
 # correct line height for Noto Serif metrics (comes with built-in line height)
 vertical_rhythm: $base_line_height_length
 horizontal_rhythm: $base_line_height_length
+
 # QUESTION should vertical_spacing be block_spacing instead?
 vertical_spacing: $vertical_rhythm
 
 # Links
 link:
   font-color: $brand_primary_susejungle
-  font-family: Poppins
+  font-family: SUSE
   font-style: italic
   font_size: $base_font_size_medium
 
 # codespan is currently used for inline monospaced in prose and table cells
 codespan:
-  background-color: #ffffff
-  font-color: #0C322C
-  font-family: Poppins
-  font-style: bold
-  font_size: $base_font_size_xxsmall * 1.3
+  font_color: #0c322c
+  font_family: SUSE
+  font_style: light
+  text_decoration: underline
+  text_decoration_color: #efefef
+
 
 ulist:
   marker:
-    font_family: Poppins
+    font_family: SUSE
     font_size: 18
     line_height: 0.4
-    margin: 10
+    margin-top: 5
+    margin-bottom: 5
     font_color: $brand_primary_susejungle
     disc:
       content: "\u2022"
@@ -194,11 +178,11 @@ heading:
   font_style: bold
   h1:
     font_color: $brand_primary_susepine
-    font_size: $base_font_size_superlarge
+    font_size: $base_font_size_xxlarge
     font_weight: normal
   h2:
     font_color: $brand_primary_susejungle
-    font_size: $base_font_size_xxxlarge
+    font_size: $base_font_size_xxlarge
     font_style: normal
   h3:
     font_color: $brand_primary_susejungle
@@ -206,15 +190,15 @@ heading:
     font_style: normal
   h4:
     font_color: $brand_primary_susejungle
-    font_size: $base_font_size_xlarge
+    font_size: $base_font_size_xxlarge
     font_style: normal
   h5:
     font_color: $brand_primary_susejungle
-    font_size: $base_font_size_large
+    font_size: $base_font_size_xxlarge
     font_style: normal
   h6:
     font_color: $brand_primary_susejungle
-    font_size: $base_font_size_medium
+    font_size: $base_font_size_xxlarge
   line_height: 1
   margin_top: $vertical_rhythm * 0.4
   margin_bottom: $vertical_rhythm * 0.9
@@ -223,55 +207,41 @@ heading:
 extends: default
 role:
   title:
-    background-color: #30BA78
-    border-offset: 4
+    background-color: #c0efde
+    border-offset: 2
 
 # Title Page
 title-page:
   background-color: #fff
   font-family: $brand_font
   align: left
-  background_image: image:images/cloud.jpeg[fit=none, pdfwidth=100%, position=center]
+  revision:
+    display: none
 
   # Logo
   logo:
-    top: 90%
-    align: right
-    image: image:images/suse-vert-forlight.svg[pdfwidth=15%]
+    top: 0%
+    align: left
+    image: image:images/SUSE_Logo-hor_rgb.svg[pdfwidth=32%]
 
   # Title
   title:
-    font_color: #fff
-    font-style: normal
-    top: 5%
+    font_color: #0c322c
+    font-style: light
+    top: 28%
     font_size: $base_font_size_xxxlarge
     line_height: .7
-    margin-bottom: 10
-    font-family: Poppins
-
+    margin-bottom: 4
+    font-family: SUSE
+    
   # Subtitle
   subtitle:
-    font_color: #0C322C
-    font_style: bold
+    font_color: #30ba78
+    font_style: semibold
     line_height: .7
-    margin_top: $base_font_size * 1.25
-    font_size: $base_font_size_superlarge
-    font-family: Poppins
-
-  # Authors
-  authors:
-    font_color: #ffffff
-    margin_top: $base_font_size * 1.25
-    font_size: $base_font_size
-
-  # Product version number and date
-  revision:
-    line_height: .7
-    margin-top: 18
-    font-style: italic
-    font-color: #0C322C
-    font-size: $heading_h5_font_size
-    #margin-top: $base_font_size * 1.25
+    margin_top: 5
+    font_size: $base_font_size_ultralarge
+    font-family: SUSE
 
 block:
   margin_top: 0
@@ -342,7 +312,7 @@ button:
   font-color: $brand_primary_susepine
   font-size: $base_font_size_normal
   background-color: #F2F2F2
-  font-family: Poppins
+  font-family: SUSE
 
 kbd:
   separator: "\u2009+\u2009"
@@ -363,15 +333,15 @@ quote:
 
 # Code is used for source blocks
 code:
-  font_color: #0C322C
-  font_family: Poppins
+  font_color: #0c322c
+  border_color: #eafaf4
+  background_color: #eafaf4
+  font_family: M+ 1mn
   font_size: ceil($base_font_size)
   line_height: 1.0
   line_gap: 0
-  border_radius: 2
+  border_radius: 0
   padding: 6
-  border_color: #ffffff
-  background_color: #90EBCD
 
 # Conum
 conum:
@@ -448,31 +418,43 @@ table:
 # Table of Contents
 toc:
   title:
+    content: 'Contents'
+    font_style: light
     font_color: $brand_primary_susepine
+    font_size: $base_font_size_superlarge
+    
+  hanging-indent: 0.2in
   indent: $horizontal_rhythm
+
   font_family: $brand_font
   font_size: $base_font_size
-  font_color: $brand_primary_susejungle
-  line_height: 1.0
+  font_color: $brand_neutral_black
+  line_height: 1.2
+
   dot_leader:
-    content: ". "
-    font_color: $brand_primary_susepine
-    levels: 2 3 4 5 6
+   content: ". "
+   font_color: $brand_primary_susepine
+   font_size: $base_font_size_xlarge
+   font_style: italic
+   levels: 1
+
   h1_font_color: $brand_primary_susepine
   h1_font_size: $base_font_size_xxlarge
+  h1_font_style: bold
 
-  h2_font_color: $brand_primary_susejungle
+  h2_font_color: $brand_primary_susepine
   h2_font_size: $base_font_size_xlarge
 
-  h3_font_color: $brand_primary_susepine
+  h3_font_color: $brand_neutral_darkgrey
   h3_font_size: $base_font_size_medium
 
-  h4_font_color: $brand_primary_susepine
-  h4_font_size: $base_font_size_medium
+  h4_font_color: $brand_neutral_darkgrey
+  h4_font_size: $base_font_size_small
 
-  h5_font_color: $brand_primary_susepine
+  h5_font_color: $brand_neutral_darkgrey
   h5_font_size: $base_font_size_small
 
+# Heading
 header:
   font_size: $base_font_size_xsmall
   font_color: #adadad
@@ -496,46 +478,25 @@ header:
       content: $header_recto_center_content
     right:
      content: $header_recto_right_content
+
+# Footer     
 footer:
   font-size: $base_font_size_xsmall
   font-color: #000
   font-style: italic
-  # NOTE if background_color is set, background and border will span width of page
-  border_color: dddddd
-  border_width: 0.25
   height: 0.75in
   line_height: $base_line_height
   padding: [$base_line_height_length / 0, 0, 0, 0]
   vertical_align: top
   image_vertical_align: middle
-  #image_vertical_align: <alignment> or <number>
-  # additional attributes for content:
-  # * {page-count}
-  # * {page-number}
-  # * {document-title}
-  # * {document-subtitle}
-  # * {chapter-title}
-  # * {section-title}
-  # * {section-or-chapter-title}
-
+  font_family: SUSE
   recto:
-    #columns: "<50% =0% >50%"
     left:
-      content: '{document-title} | {section-or-chapter-title} '
-
-    center:
-      content:
-
+      content: '*{page-number} / {page-count}*'
     right:
-      content:  '*{page-number} / {page-count}*'
-
+      content: '{section-title} | {document-title}'
   verso:
     left:
-      content: $footer_recto_left_content
-
-    center:
-      content: $footer_recto_center_content
-
+      content: '*{page-number} / {page-count}*'
     right:
-      content: $footer_recto_right_content
-
+      content: '{section-title} | {document-title}'
