Major Overhaul: Asciidoctor-PDF Theming, Backend Tooling, and Book Overview Pages  (#3760)
* first push for pdf

* update pdf styles and added new ruby template

* update book introductions to support new pdf styles

* update

* update

* removed doc date from subsections

* update

* update

* update

* updated pdf themes for english

* update

* update

* update

* update

--- a/parameters.yml
+++ b/parameters.yml
@@ -12,11 +12,9 @@ products:
           value: "5.1"
         - attribute: currentversion
           value: "Beta 1"
-        - attribute: currentyear
-          value: "2025"
-        # releaseversion is used to specify what version a user is looking at. In the future add :releaseversion: to each page header
-        #- attribute: releaseversion
-        #  value: "GMC"
+        # License date adjust each year
+        - attribute: copyrightdate
+          value: "2011–2025"
         - attribute: mlm-content
           value: true
         - attribute: uyuni-content
@@ -418,12 +416,13 @@ asciidoc:
       value: ../../snippets/
     - attribute: sourcedir
       value: .
+    # Source highlighter for Antora. PDF generation uses rouge and is located in NAVlist
     - attribute: source-highlighter
       value: highlight.js
     - attribute: toclevels
       value: 3
     - attribute: toc
-      value: false
+      value: macro
     - attribute: doctype
       value: book
     - attribute: byos
