--- a/.github/workflows/find_unused_files.yml
+++ b/.github/workflows/find_unused_files.yml
@@ -10,4 +10,4 @@ jobs:
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
 
     - name: Look for unused files
-      run: ./find_unused administration client-configuration common-workflows installation-and-upgrade quickstart reference retail specialized-guides
+      run: ./find_unused
