--- a/parameters.yml
+++ b/parameters.yml
@@ -11,7 +11,7 @@ products:
         - attribute: productnumber
           value: "5.1"
         - attribute: currentversion
-          value: "Beta 1"
+          value: "Beta 2"
         # License date adjust each year
         - attribute: copyrightdate
           value: "2011–2025"
@@ -40,7 +40,7 @@ products:
       # For d.s.c use: https://documentation.suse.com/multi-linux-manager/5.1/
       # For the webui use: /
       - attribute: url
-        value: https://documentation.suse.com/multi-linux-manager/5.1/
+        value: /
     ui:
       bundle:
         - attribute: url
