enahanced CJK languages and added themes for each CJK output, ja, sc, kr

--- a/parameters.yml
+++ b/parameters.yml
@@ -116,7 +116,7 @@ languages: #language parameters
   - langcode: "ja"
     locale: "ja_JP.UTF-8"
     gnudateformat: "%Y年%m月%e日"
-    pdf_theme_mlm: "suse-cjk"
+    pdf_theme_mlm: "suse-jp"
     pdf_theme_uyuni: "uyuni-cjk"
     flag_svg_without_ext: "jaFlag"
     nation_in_eng: "japan"
@@ -125,7 +125,7 @@ languages: #language parameters
   - langcode: "zh_CN"
     locale: "zh_CN.UTF-8"
     gnudateformat: "%Y年%m月%e日"
-    pdf_theme_mlm: "suse-cjk"
+    pdf_theme_mlm: "suse-sc"
     pdf_theme_uyuni: "uyuni-cjk"
     flag_svg_without_ext: "china"
     nation_in_eng: "china"
@@ -134,7 +134,7 @@ languages: #language parameters
   - langcode: "ko"
     locale: "ko_KR.UTF-8"
     gnudateformat: "%Y년%m월%e일"
-    pdf_theme_mlm: "suse-cjk"
+    pdf_theme_mlm: "suse-ko"
     pdf_theme_uyuni: "uyuni-cjk"
     flag_svg_without_ext: "koFlag"
     nation_in_eng: "korea"
