--- a/Makefile.section.functions
+++ b/Makefile.section.functions
@@ -27,7 +27,7 @@ pdf-installation-and-upgrade-index-ja:
 
 .PHONY: pdf-installation-and-upgrade-mlm-ja
 pdf-installation-and-upgrade-mlm-ja: translations prepare-antora-mlm-ja pdf-installation-and-upgrade-index-ja
-	$(call pdf-installation-and-upgrade-product,translations/ja,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-installation-and-upgrade-product,translations/ja,suse-jp,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-installation-and-upgrade-uyuni-ja
 pdf-installation-and-upgrade-uyuni-ja: translations prepare-antora-uyuni-ja pdf-installation-and-upgrade-index-ja
@@ -40,7 +40,7 @@ pdf-installation-and-upgrade-index-zh_CN:
 
 .PHONY: pdf-installation-and-upgrade-mlm-zh_CN
 pdf-installation-and-upgrade-mlm-zh_CN: translations prepare-antora-mlm-zh_CN pdf-installation-and-upgrade-index-zh_CN
-	$(call pdf-installation-and-upgrade-product,translations/zh_CN,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-installation-and-upgrade-product,translations/zh_CN,suse-sc,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-installation-and-upgrade-uyuni-zh_CN
 pdf-installation-and-upgrade-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-installation-and-upgrade-index-zh_CN
@@ -53,7 +53,7 @@ pdf-installation-and-upgrade-index-ko:
 
 .PHONY: pdf-installation-and-upgrade-mlm-ko
 pdf-installation-and-upgrade-mlm-ko: translations prepare-antora-mlm-ko pdf-installation-and-upgrade-index-ko
-	$(call pdf-installation-and-upgrade-product,translations/ko,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
+	$(call pdf-installation-and-upgrade-product,translations/ko,suse-ko,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
 
 .PHONY: pdf-installation-and-upgrade-uyuni-ko
 pdf-installation-and-upgrade-uyuni-ko: translations prepare-antora-uyuni-ko pdf-installation-and-upgrade-index-ko
@@ -89,7 +89,7 @@ pdf-client-configuration-index-ja:
 
 .PHONY: pdf-client-configuration-mlm-ja
 pdf-client-configuration-mlm-ja: translations prepare-antora-mlm-ja pdf-client-configuration-index-ja
-	$(call pdf-client-configuration-product,translations/ja,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-client-configuration-product,translations/ja,suse-jp,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-client-configuration-uyuni-ja
 pdf-client-configuration-uyuni-ja: translations prepare-antora-uyuni-ja pdf-client-configuration-index-ja
@@ -102,7 +102,7 @@ pdf-client-configuration-index-zh_CN:
 
 .PHONY: pdf-client-configuration-mlm-zh_CN
 pdf-client-configuration-mlm-zh_CN: translations prepare-antora-mlm-zh_CN pdf-client-configuration-index-zh_CN
-	$(call pdf-client-configuration-product,translations/zh_CN,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-client-configuration-product,translations/zh_CN,suse-sc,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-client-configuration-uyuni-zh_CN
 pdf-client-configuration-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-client-configuration-index-zh_CN
@@ -115,7 +115,7 @@ pdf-client-configuration-index-ko:
 
 .PHONY: pdf-client-configuration-mlm-ko
 pdf-client-configuration-mlm-ko: translations prepare-antora-mlm-ko pdf-client-configuration-index-ko
-	$(call pdf-client-configuration-product,translations/ko,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
+	$(call pdf-client-configuration-product,translations/ko,suse-ko,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
 
 .PHONY: pdf-client-configuration-uyuni-ko
 pdf-client-configuration-uyuni-ko: translations prepare-antora-uyuni-ko pdf-client-configuration-index-ko
@@ -151,7 +151,7 @@ pdf-administration-index-ja:
 
 .PHONY: pdf-administration-mlm-ja
 pdf-administration-mlm-ja: translations prepare-antora-mlm-ja pdf-administration-index-ja
-	$(call pdf-administration-product,translations/ja,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-administration-product,translations/ja,suse-jp,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-administration-uyuni-ja
 pdf-administration-uyuni-ja: translations prepare-antora-uyuni-ja pdf-administration-index-ja
@@ -164,7 +164,7 @@ pdf-administration-index-zh_CN:
 
 .PHONY: pdf-administration-mlm-zh_CN
 pdf-administration-mlm-zh_CN: translations prepare-antora-mlm-zh_CN pdf-administration-index-zh_CN
-	$(call pdf-administration-product,translations/zh_CN,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-administration-product,translations/zh_CN,suse-sc,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-administration-uyuni-zh_CN
 pdf-administration-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-administration-index-zh_CN
@@ -177,7 +177,7 @@ pdf-administration-index-ko:
 
 .PHONY: pdf-administration-mlm-ko
 pdf-administration-mlm-ko: translations prepare-antora-mlm-ko pdf-administration-index-ko
-	$(call pdf-administration-product,translations/ko,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
+	$(call pdf-administration-product,translations/ko,suse-ko,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
 
 .PHONY: pdf-administration-uyuni-ko
 pdf-administration-uyuni-ko: translations prepare-antora-uyuni-ko pdf-administration-index-ko
@@ -213,7 +213,7 @@ pdf-reference-index-ja:
 
 .PHONY: pdf-reference-mlm-ja
 pdf-reference-mlm-ja: translations prepare-antora-mlm-ja pdf-reference-index-ja
-	$(call pdf-reference-product,translations/ja,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-reference-product,translations/ja,suse-jp,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-reference-uyuni-ja
 pdf-reference-uyuni-ja: translations prepare-antora-uyuni-ja pdf-reference-index-ja
@@ -226,7 +226,7 @@ pdf-reference-index-zh_CN:
 
 .PHONY: pdf-reference-mlm-zh_CN
 pdf-reference-mlm-zh_CN: translations prepare-antora-mlm-zh_CN pdf-reference-index-zh_CN
-	$(call pdf-reference-product,translations/zh_CN,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-reference-product,translations/zh_CN,suse-sc,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-reference-uyuni-zh_CN
 pdf-reference-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-reference-index-zh_CN
@@ -239,7 +239,7 @@ pdf-reference-index-ko:
 
 .PHONY: pdf-reference-mlm-ko
 pdf-reference-mlm-ko: translations prepare-antora-mlm-ko pdf-reference-index-ko
-	$(call pdf-reference-product,translations/ko,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
+	$(call pdf-reference-product,translations/ko,suse-ko,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
 
 .PHONY: pdf-reference-uyuni-ko
 pdf-reference-uyuni-ko: translations prepare-antora-uyuni-ko pdf-reference-index-ko
@@ -275,7 +275,7 @@ pdf-retail-index-ja:
 
 .PHONY: pdf-retail-mlm-ja
 pdf-retail-mlm-ja: translations prepare-antora-mlm-ja pdf-retail-index-ja
-	$(call pdf-retail-product,translations/ja,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-retail-product,translations/ja,suse-jp,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-retail-uyuni-ja
 pdf-retail-uyuni-ja: translations prepare-antora-uyuni-ja pdf-retail-index-ja
@@ -288,7 +288,7 @@ pdf-retail-index-zh_CN:
 
 .PHONY: pdf-retail-mlm-zh_CN
 pdf-retail-mlm-zh_CN: translations prepare-antora-mlm-zh_CN pdf-retail-index-zh_CN
-	$(call pdf-retail-product,translations/zh_CN,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-retail-product,translations/zh_CN,suse-sc,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-retail-uyuni-zh_CN
 pdf-retail-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-retail-index-zh_CN
@@ -301,7 +301,7 @@ pdf-retail-index-ko:
 
 .PHONY: pdf-retail-mlm-ko
 pdf-retail-mlm-ko: translations prepare-antora-mlm-ko pdf-retail-index-ko
-	$(call pdf-retail-product,translations/ko,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
+	$(call pdf-retail-product,translations/ko,suse-ko,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
 
 .PHONY: pdf-retail-uyuni-ko
 pdf-retail-uyuni-ko: translations prepare-antora-uyuni-ko pdf-retail-index-ko
@@ -337,7 +337,7 @@ pdf-common-workflows-index-ja:
 
 .PHONY: pdf-common-workflows-mlm-ja
 pdf-common-workflows-mlm-ja: translations prepare-antora-mlm-ja pdf-common-workflows-index-ja
-	$(call pdf-common-workflows-product,translations/ja,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-common-workflows-product,translations/ja,suse-jp,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-common-workflows-uyuni-ja
 pdf-common-workflows-uyuni-ja: translations prepare-antora-uyuni-ja pdf-common-workflows-index-ja
@@ -350,7 +350,7 @@ pdf-common-workflows-index-zh_CN:
 
 .PHONY: pdf-common-workflows-mlm-zh_CN
 pdf-common-workflows-mlm-zh_CN: translations prepare-antora-mlm-zh_CN pdf-common-workflows-index-zh_CN
-	$(call pdf-common-workflows-product,translations/zh_CN,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-common-workflows-product,translations/zh_CN,suse-sc,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-common-workflows-uyuni-zh_CN
 pdf-common-workflows-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-common-workflows-index-zh_CN
@@ -363,7 +363,7 @@ pdf-common-workflows-index-ko:
 
 .PHONY: pdf-common-workflows-mlm-ko
 pdf-common-workflows-mlm-ko: translations prepare-antora-mlm-ko pdf-common-workflows-index-ko
-	$(call pdf-common-workflows-product,translations/ko,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
+	$(call pdf-common-workflows-product,translations/ko,suse-ko,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
 
 .PHONY: pdf-common-workflows-uyuni-ko
 pdf-common-workflows-uyuni-ko: translations prepare-antora-uyuni-ko pdf-common-workflows-index-ko
@@ -399,7 +399,7 @@ pdf-specialized-guides-index-ja:
 
 .PHONY: pdf-specialized-guides-mlm-ja
 pdf-specialized-guides-mlm-ja: translations prepare-antora-mlm-ja pdf-specialized-guides-index-ja
-	$(call pdf-specialized-guides-product,translations/ja,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-specialized-guides-product,translations/ja,suse-jp,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-specialized-guides-uyuni-ja
 pdf-specialized-guides-uyuni-ja: translations prepare-antora-uyuni-ja pdf-specialized-guides-index-ja
@@ -412,7 +412,7 @@ pdf-specialized-guides-index-zh_CN:
 
 .PHONY: pdf-specialized-guides-mlm-zh_CN
 pdf-specialized-guides-mlm-zh_CN: translations prepare-antora-mlm-zh_CN pdf-specialized-guides-index-zh_CN
-	$(call pdf-specialized-guides-product,translations/zh_CN,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-specialized-guides-product,translations/zh_CN,suse-sc,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-specialized-guides-uyuni-zh_CN
 pdf-specialized-guides-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-specialized-guides-index-zh_CN
@@ -425,7 +425,7 @@ pdf-specialized-guides-index-ko:
 
 .PHONY: pdf-specialized-guides-mlm-ko
 pdf-specialized-guides-mlm-ko: translations prepare-antora-mlm-ko pdf-specialized-guides-index-ko
-	$(call pdf-specialized-guides-product,translations/ko,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
+	$(call pdf-specialized-guides-product,translations/ko,suse-ko,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
 
 .PHONY: pdf-specialized-guides-uyuni-ko
 pdf-specialized-guides-uyuni-ko: translations prepare-antora-uyuni-ko pdf-specialized-guides-index-ko
@@ -461,7 +461,7 @@ pdf-legal-index-ja:
 
 .PHONY: pdf-legal-mlm-ja
 pdf-legal-mlm-ja: translations prepare-antora-mlm-ja pdf-legal-index-ja
-	$(call pdf-legal-product,translations/ja,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-legal-product,translations/ja,suse-jp,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-legal-uyuni-ja
 pdf-legal-uyuni-ja: translations prepare-antora-uyuni-ja pdf-legal-index-ja
@@ -474,7 +474,7 @@ pdf-legal-index-zh_CN:
 
 .PHONY: pdf-legal-mlm-zh_CN
 pdf-legal-mlm-zh_CN: translations prepare-antora-mlm-zh_CN pdf-legal-index-zh_CN
-	$(call pdf-legal-product,translations/zh_CN,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
+	$(call pdf-legal-product,translations/zh_CN,suse-sc,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
 
 .PHONY: pdf-legal-uyuni-zh_CN
 pdf-legal-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-legal-index-zh_CN
@@ -487,7 +487,7 @@ pdf-legal-index-ko:
 
 .PHONY: pdf-legal-mlm-ko
 pdf-legal-mlm-ko: translations prepare-antora-mlm-ko pdf-legal-index-ko
-	$(call pdf-legal-product,translations/ko,suse-cjk,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
+	$(call pdf-legal-product,translations/ko,suse-ko,$(PRODUCTNAME_MLM),$(MLM_CONTENT),$(FILENAME_MLM),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
 
 .PHONY: pdf-legal-uyuni-ko
 pdf-legal-uyuni-ko: translations prepare-antora-uyuni-ko pdf-legal-index-ko
